# school_event_safety

./: .gitignore  Cargo.toml  LICENSE.md  README.md  Trunk.toml  index.html
src/: app.rs  event.rs  lib.rs  main.rs
src/app/: components.rs
