[package]
name = "school_event_safety"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
leptos = { version = "0.3.0", features = ["stable"] }
leptos_meta = { version = "0.3.0", features = ["stable", "csr"] }
leptos_router = { version = "0.3.0", features = ["stable", "csr"] }
wee_alloc = "0.4.5"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
